# iirdsp

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  INITIAL_STRUCTURE.md  README.md  build.sh
cpp/: iirdsp.hpp
examples/: ecg_desktop.c
include/: butter.h  config.h  iirdsp.h  notch.h  sos.h
src/: butter.c  notch.c  sos.c
tests/: impulse.cpp
